# MPI_OpenMP_tasks_OmpSs

./: .gitignore  README.md
ILU0_MPI_OmpSs/: README  default.mk
ILU0_MPI_OmpSs/Data/: A100.rsa_2_Rang.txt  A100.rsa_4_Rang.txt  A100.rsa_4_Tree.txt  A100.rsa_64_Rang.txt  A100.rsa_64_Tree.txt  A100.rsa_8_Tree.txt  A318.rsa_128_Rang.txt  A318.rsa_128_Tree.txt  A318.rsa_16_Tree.txt  A318.rsa_1_Rang.txt  A318.rsa_32_Tree.txt  A318.rsa_4_Rang.txt  A318.rsa_64_Tree.txt  A318.rsa_8_Tree.txt
ILU0_MPI_OmpSs/Shared/: DoubleVectors.c  DoubleVectors.h  FloatVectors.c  FloatVectors.h  HarwellBoeing.c  HarwellBoeing.h  InputOutput.c  InputOutput.h  IntVectors.c  IntVectors.h  LongVectors.c  LongVectors.h  ScalarVectors.c  ScalarVectors.h  SparseHarwellBoeing.c  SparseHarwellBoeing.h  SparseHarwellBoeingNew.c  SparseHarwellBoeingNew.h  SparseMatrices.c  SparseMatrices.h  SparseMatricesELL.c  SparseMatricesELL.h  SparseMatricesNew.c  SparseMatricesNew.h  SparseSymmetric.c  SparseSymmetric.h  SparseSymmetricNew.c  SparseSymmetricNew.h  makefile  (+6 more)
ILU0_MPI_OpenMP_tasks/: COMPILE.sh  README  default.mk
ILU0_OpenMP_tasks/: README
Ludwig/: README  config.mk
Ludwig_MPI_OmpSs/: Makefile_ompss.mk
Ludwig_MPI_OpenMP_tasks/: config.mk
heat/: Makefile  README.md  heat.conf
ipic3d/: CMakeLists.txt  README  iPIC3D_MPI_OpenMP_tasks_jenkins.sh  iPic3D.cpp
ipic3d/postprocessing_tools/c++/Xdmf/: CMakeLists.txt  h5Xdmf.cpp  h5Xdmf.inp
ipic3d/tests/test_striping/: CMakeLists.txt  Makefile  basic.c
linsolv/: LICENSE  README  taudef.template
nbody/: .gitignore  Makefile  README.md
(+470 files in other folders)
